fixed script & menu footer & main footer & padding for ul,main title,navigation

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -7,9 +7,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
   color: $swiper-title-color;
   opacity: 72.18%;
+
   
   .copyright {
     display: flex;
