--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,3 +11,4 @@ $gradient:linear-gradient(to right,#f8f8f8,#ffffff);
 $modal-shadow: 16px 0px 52px 0px #0E185033,
                 -2px 0px 4px 0px #454F7E05;
 $modal-background:rgba(#ffffff, 0.7);
+$buttonArrowColor:#FF3E79;
