--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -4,14 +4,12 @@
   display: none;
 }
 
-table{
-    display: none;
+table {
+  display: none;
 }
 
 @media (min-width: 768px) and (max-width: 1336px) {
-  * {
-    box-sizing: border-box;
-  }
+
   .grid {
     display: block;
     padding-top: 32px;
@@ -66,19 +64,6 @@ table{
     padding-left: 16px;
   }
 
-  .content__button--watch {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $main-color;
-    font-family: 'TT Lakes';
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.2px;
-    color: $text-color;
-  }
-
   .devices__wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fill, 240px);
@@ -116,58 +101,71 @@ table{
       padding-left: 16px;
       width: 100%;
     }
+
+    &__button--arrow {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: $main-color;
+      font-family: 'TT Lakes';
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 24px;
+      letter-spacing: -0.2px;
+      color: $text-color;
+    }
   }
 
   table {
     display: block;
     padding-left: 16px;
-    padding-right:24px;
-  width: 100%;
-  border-collapse: collapse;
-}
+    padding-right: 24px;
+    width: 100%;
+    border-collapse: collapse;
+  }
 
-th{
-  font-weight:500;
-  font-size:14px;
-  line-height: 16px;
-  text-align: start;
-  color:$button-color;
-}
+  th {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: start;
+    color: $button-color;
+    opacity:72.18%;
+    padding: 0;
+  }
 
-td,th{
-  padding:16px;
-  width:100vh;
-  padding-left:24px;
-}
+  td,
+  th {
+    padding: 16px;
+    width: 100vh;
+    padding-left: 24px;
+  }
 
-td{
-  font-weight: 400;
-  font-size:14px;
-  line-height: 18px;
-  color:$text-color;
-  background-color: white;
-  margin-left:24px;
+  td {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: $text-color;
+    background-color: white;
+  }
 
-}
+  tbody tr {
+    position: relative;
+  }
 
+  tbody tr::after {
+    content: '';
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    bottom: 0;
+    height: 1px;
+    background-color: $main-color;
+  }
 
-tbody tr {
-  position: relative;
-}
-
-tbody tr::after {
-  content: '';
-  position: absolute;
-  left: 20px;
-  right: 20px;
-  bottom: 0;
-  height: 1px;
-  background-color:$main-color;
-}
-
-tbody tr:last-child::after {
-  display: none;
-}
+  tbody tr:last-child::after {
+    display: none;
+  }
 
   .button--order {
     width: 119px;
@@ -184,6 +182,12 @@ tbody tr:last-child::after {
 
   .brands__button,
   .devices__button {
+    font-family: 'TT Lakes';
+    font-weight: 500;
+    font-size: 16px;
+    line-height:24px;
+    letter-spacing:-0,2px;
+    color: $text-color;
     background-color: $main-color;
     display: flex;
     align-items: center;
@@ -195,4 +199,16 @@ tbody tr:last-child::after {
   button:focus {
     opacity: 0.6;
   }
+}
+
+@media (min-width:1336px) {
+  th{
+    text-align: left;
+    padding:0;
+    color: $button-color;
+     opacity:72.18%;
+     font-weight:500;
+     font-size: 14px;
+     line-height:16px;
+  }  
 }
