--- a/src/scss/down-container.scss
+++ b/src/scss/down-container.scss
@@ -5,8 +5,8 @@
     padding-left:16px;
     padding-top:32px;
     padding-bottom:50px;
-        display: flex;
-        flex-direction: column;
+    display: flex;
+    flex-direction: column;
 
     &__text{
         font-weight:400;
@@ -19,11 +19,12 @@
         align-items: center;
     }
 
-    
+
 
     &__button{
         font-family: "TT Lakes";
         display: flex;
+        gap:10px;
         min-width:192px;
         height: auto;
         border:transparent;
@@ -32,6 +33,9 @@
         font-size: 16px;
         line-height:24px;
         letter-spacing:-0.2px;
+        .down-container__button--arrow{
+            color:$buttonArrowColor;
+        }
     }
 }
 
