--- a/src/scss/swipers-style.scss
+++ b/src/scss/swipers-style.scss
@@ -63,13 +63,7 @@
     padding-right:16px;
     }
 
-    .swiper__pagination--first,
-    .swiper__pagination--second{
-        display: flex;
-        justify-content: center;
-        padding-top:16px;
-        padding-bottom:16px;
-    }
+   
 
     /*swiper second*/
 
@@ -102,21 +96,14 @@
         padding: 16px;
     }
 
-    .swiper__pagination--second{
-        display: flex;
-
-    }
-
     /*tridth swiper*/
 
     .swiper-slide__prise--wrapper{
-        width:260px;
+        width:270px;
         height:270px;
         border-radius:6px;
         background-color: #ffffff;
-        padding-left:16px;display: flex;
-        flex-direction: column;
-
+        padding-left:16px;
     }
 
     .swiper-slide__subtitle{
@@ -167,17 +154,19 @@
         align-items: center;
         font-size:20px;
     }
+}
 
+
+
+    .swiper__pagination--first,
+    .swiper__pagination--second,
     .swiper__pagination--third{
         display: flex;
         justify-content: center;
-        margin-top:16px;
+        padding-top:16px;
+        padding-bottom:16px;
     }
-
-   
     
-}
-
- .grid{
+    .grid{
         display: none;
     }
