fixed script & menu footer & main footer & padding for ul,main title,navigation

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -127,7 +127,7 @@ nav {
     line-height: 24px;
     letter-spacing: -0.2px;
     color: $text-color;
-    padding-top:16px;
+    padding-bottom:16px;
   }
 }
 
