--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -25,7 +25,6 @@
 @media (min-width: 768px) and (max-width: 1336px) {
   .add-buttons {
     display: flex;
-    padding-right:20px;
     gap:16px;
   }
 
@@ -140,8 +139,16 @@
     padding-left: 28px;
   }
 }
+.content__button--watch{
+  padding-top:16px;
+}
 }
 @media (min-width: 1336px) {
+
+  .content__button--watch{
+  padding-top:16px;
+  }
+
   header {
     display: flex;
     justify-content: space-between;
