--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -147,6 +147,10 @@ button{
     opacity: 0.8;
 }
 
+.modal.visable{
+  display: block;
+ }
+
 
 @media (min-width:768px) and (max-width:1366px){
 .modal{
